@@ -47,7 +47,7 @@ public class OracleJdbc extends SqlJdbc {
         if (query.size() != 1) {
             throw new BaseException("查询序列出错");
         }
-        return MapUtil.get(query.get(0), "ID", Long.class);
+        return MapUtil.get(query.getFirst(), "ID", Long.class);
     }
 
     private static Connection getConnection(String host, int port, String sid, String username, String password) {
